# wx_gl_shadertoy_tutorial

./: .clang-format  CMakeLists.txt  README.md  script.glsl  wx_gl_shadertoy_tutorial.code-workspace
src/: analyze_osm.py  main.cpp  openglcanvas.cpp  openglcanvas.h  osm_loader.cpp  osm_loader.h
src/shaders/: house_shader.fs
